--- a/My Ammo Project/Packages/manifest.json
+++ b/My Ammo Project/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
     "com.unity.netcode.gameobjects": "1.4.0",
+    "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
